Atomic changesgit add .git add . Fix influencer header on mobile plus minor tweaks in other area

--- a/app/design/templates/legere/css/main.css
+++ b/app/design/templates/legere/css/main.css
@@ -441,11 +441,6 @@ nav ul a,
     color: #045690;
 }
 
-/* Bloquote color */
-.sienna {
-    color: #e0562b;
-}
-
 /**
  * Clip-header
  */
