--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -78,8 +78,15 @@ header.l-grid p {
 }
 
 .l-header h1 {
-    margin-top: 2.5rem; 
+    margin-top: 2.5rem;
 }
+
+@media all and (max-width: 768px) 
+{
+    .l-header-style div h1 {
+        font-size: 1.3rem;
+    }
+    
 
 /**
  * Main
@@ -136,7 +143,6 @@ header.l-grid p {
          margin-right: 1.2rem;
         }
 }
-
 
 /**
  * Contact Form
